--- a/config/config.yml
+++ b/config/config.yml
@@ -14,6 +14,8 @@ application:
 #  level: trace
 #  enableddb: false      #数据库日志开关
 #
+
+
 # -------------------数据库----------------------
 database:
   driver: postgres
@@ -34,3 +36,17 @@ database:
 ## -------------------消息队列-------------------------
 ##带调研选择消息队列
 #queue:
+
+# -------------------jwt-------------------------
+jwt:
+  # token 密钥
+  accessSecret: elle-qu
+  refreshSecret: loveyou
+  # token 过期时间 单位：秒
+  timeout: 3600
+
+# -------------------redis缓存-------------------------
+redis:
+  address: 127.0.0.1:6379
+  password: Ggg123654.
+  db: 2
