--- a/config/config.yml
+++ b/config/config.yml
@@ -45,7 +45,7 @@ qiniu:
   AK: WhRnhuuljtU1hBNKbBLkkX2T-ymTLTDs_pC7PSn4
   #SecretKey
   SK: KN9UTKLC7HKt2QMy4u7l8XSvEgLBJcy9CTtUfVTI
-  PubDomain: http://www.leetroll.com
+  PubDomain: http://pub.leetroll.com
   PubBucket: pub-img01
 
   VideoDomain: http://private.video.leetroll.com
